# i3blocks-mpris

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  formatter_test.py  i3blocks_mpris.py  i3blocks_spotify_persist.py  pyproject.toml  setup.cfg  spotify
