[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'i3blocks-mpris'
description = 'A persistent i3blocks blocklet for the MPRIS D-Bus interface'
readme = 'README.md'
license = {text = 'MIT'}
authors = [
    {name = 'Dmitry Meyer', email = 'me@undef.im'},
]
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: End Users/Desktop',
    'License :: OSI Approved :: MIT License',
    'Operating System :: POSIX :: Linux',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
]
keywords = ['i3blocks', 'blocklet']
requires-python = '>= 3.10'
dependencies = [
    'dbus-python >= 1.3, < 1.5',
    'PyGObject >= 3.54, < 3.55',
]
dynamic = ['version']

[project.urls]
Homepage = 'https://github.com/un-def/i3blocks-mpris'
Repository = 'https://github.com/un-def/i3blocks-mpris.git'
Changelog = 'https://github.com/un-def/i3blocks-mpris/blob/master/CHANGELOG.md'
Issues = 'https://github.com/un-def/i3blocks-mpris/issues'

[project.scripts]
i3blocks-mpris = 'i3blocks_mpris:_main'

[tool.setuptools]
py-modules = ['i3blocks_mpris']
zip-safe = true
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = 'i3blocks_mpris.__version__'}

[tool.isort]
lines_after_imports = 2
multi_line_output = 5
include_trailing_comma = true
use_parentheses = true
