[metadata]
name = i3blocks-mpris
version = attr: i3blocks_mpris.__version__
description = A persistent i3blocks blocklet for the MPRIS D-Bus interface
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/un-def/i3blocks-mpris
author = un.def
author_email = me@undef.im
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = true
python_requires = >=3.5
py_modules = i3blocks_mpris
install_requires =
    dbus-python >= 1.2.4, < 1.3
    PyGObject >= 3.26, < 3.37

[options.entry_points]
console_scripts =
    i3blocks-mpris = i3blocks_mpris:_main

[isort]
lines_after_imports = 2
multi_line_output = 5
include_trailing_comma = true
use_parentheses = true
known_third_party = dbus, gi

[flake8]
show_source = true
statistics = true
